# General-Agent-Design

./: .gitignore  AGENTS.md  README.md
agent-harness/: .gitignore  README.md  harness.example.toml  pyproject.toml
agent-harness/src/agent_harness/: cli.py  cli_observability.py  config.py
agent-harness/src/agent_harness/agents/: loader.py  outputs.py  registry.py
agent-harness/src/agent_harness/artifacts/: __init__.py  store.py
agent-harness/src/agent_harness/checkpoints/: __init__.py  manager.py  models.py  serializer.py  store.py
agent-harness/src/agent_harness/compaction/: __init__.py  service.py
agent-harness/src/agent_harness/context/: builder.py  external.py  prompt.py
agent-harness/src/agent_harness/domain/: agent.py  errors.py  messages.py  model.py  run.py  subagents.py  tools.py
agent-harness/src/agent_harness/guidance/: __init__.py  discovery.py  imports.py  models.py  rules.py  trust.py
agent-harness/src/agent_harness/mcp/: __init__.py  approval.py  approval_policy.py  auth.py  config.py  connection.py  errors.py  manager.py  models.py  naming.py  pagination.py  results.py  runtime.py  schema_validation.py
agent-harness/src/agent_harness/memory/: __init__.py  models.py  redaction.py  store.py
agent-harness/src/agent_harness/persistence/: __init__.py  database.py
agent-harness/src/agent_harness/project/: __init__.py  roots.py
agent-harness/src/agent_harness/providers/: deepseek.py  fake.py
agent-harness/src/agent_harness/recovery/: __init__.py  coordinator.py
agent-harness/src/agent_harness/rollout/: __init__.py  integrity.py  items.py
agent-harness/src/agent_harness/runtime/: agent_loop.py  budgets.py  completion.py  run_manager.py  session.py
agent-harness/src/agent_harness/sandbox/: __init__.py  base.py  (+5 more)
agent-harness/tests/: conftest.py
agent-harness/tests/fixtures/: mcp_paginated_server.py  mcp_test_server.py  oauth_test_server.py
agent-harness/tests/integration/: test_cli.py  test_demo_repository_task.py  test_interactive_session.py  test_linux_bubblewrap.py  test_mcp_oauth_local.py  test_mcp_pagination_protocol.py  test_mcp_streamable_http.py  test_phase4_runtime.py  test_phase6_recovery_process.py  test_subagent_runtime.py  test_wsl_bubblewrap.py
agent-harness/tests/live/: test_deepseek_live.py
agent-harness/tests/unit/: test_agent_loop.py  test_agent_registry_phase2.py  test_artifact_store.py  test_config.py  test_context_builder.py  test_deepseek_provider.py  test_path_policy.py  test_phase1_acceptance.py  test_phase3_security.py  test_phase41_hardening.py  test_phase4_guidance.py  test_phase4_skills.py  test_phase5_1_mcp_hardening.py  test_phase5_mcp.py  test_phase6_durable_memory.py  test_phase6_recovery_hardening.py  test_phase7_observability.py  test_rollout_recorder.py  test_subagent_scheduler.py  test_tool_registry.py  test_tool_runtime.py  test_turn_state_reset.py
(+89 files in other folders)
