[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-harness"
version = "0.1.0"
description = "Phase 1 single-agent harness runtime"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
agent-harness = "agent_harness.cli:main"

[tool.pytest.ini_options]
markers = [
  "live: tests that call a real provider API",
]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
