[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-harness"
version = "0.1.0"
description = "Local coding agent harness with threads, tools, subagents, skills, permissions, and MCP"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "PyYAML>=6.0.2",
  "mcp>=1.28,<2",
  "keyring>=25.0",
  "jsonschema>=4.23,<5",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12.20250516",
  "types-jsonschema>=4.23",
]

[project.scripts]
agent-harness = "agent_harness.cli:main"

[tool.pytest.ini_options]
markers = [
  "live: tests that call a real provider API",
  "unit: deterministic tests without external services",
  "integration_local: local process or protocol integration tests",
  "platform_linux: tests requiring Linux platform capabilities",
  "platform_windows: tests requiring Windows or WSL platform capabilities",
  "live_provider: tests that call a real model provider",
  "live_oauth: tests that require a real external OAuth provider",
]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["tests/fixtures"]
